# dropchat

./: .gitignore
backend/: langgraph.json  pyproject.toml
backend/agent/: __init__.py  rag_agent.py  state.py
backend/agent/nodes/: __init__.py  generate.py  retrieval.py  router.py
backend/agent/tools/: __init__.py
backend/api/: __init__.py  main.py
backend/api/models/: schemas.py
backend/api/services/: rag_service.py
backend/tests/: test_rag.py  test_rag_basic.py
frontend/: .env.example  .env.local.example  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/create/: route.ts
frontend/src/app/api/projects/[userHash]/[projectId]/: route.ts
frontend/src/app/chat/[userHash]/[projectId]/: page.tsx
frontend/src/components/: landing-page.tsx  privacy-overlay.tsx  share-page.tsx
frontend/src/components/icons/: dropchat.tsx
frontend/src/components/thread/: MultimodalPreview.tsx  index.tsx
frontend/src/hooks/: use-custom-chat.tsx
frontend/src/providers/: Stream.tsx
